# cfdb-data-platform

./: .gitignore  README.md  app.py  hello.py  pyproject.toml
.github/workflows/: ci.yaml
cfdb/: cfdb_stack.py  database_stack.py  storage_stack.py
tests/unit/: test_cfdb_stack.py  test_database_stack.py  test_storage_stack.py
