[project]
name = "cfdb"
version = "0.1.0"
description = "College Football Database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib==2.186.0",
    "constructs>=10.0.0,<11.0.0",
    "ruff>=0.1.1",
]

[dependency-groups]
dev = [
    "pytest==6.2.5",
    "ruff>=0.1.1",
]
